<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/story_changer"
        android:title="Top"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/scale_button"
        android:title="My Goldfish"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

</menu>
